--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-Flask==2.0.3
-requests==2.26.0
-numpy==1.21.2
-sentence-transformers==2.1.0
-pyyaml==5.4.1
-gunicorn==20.1.0
+Flask
+requests
+numpy
+sentence-transformers
+pyyaml
+gunicorn
+Werkzeug
+huggingface-hub
 
