--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,6 +28,11 @@ jobs:
           echo "HOST_PORT=$HOST_PORT" >> $GITHUB_ENV
           echo "FLASK_ENV=$FLASK_ENV" >> $GITHUB_ENV
 
+      - name: Install docker-compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.5/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+
       - name: Run integration tests 1
         run: ./tests/integration-tests-docker-compose.sh
 
